[project]
name = "pixivutil2"
version = "2025.11.12"
description = "Download images from Pixiv, FANBOX, and Sketch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.9.3",
    "browser-cookie3>=0.20.1",
    "certifi>=2021.5.30",
    "cloudscraper>=1.2.58",
    "colorama>=0.4.4",
    "curl-cffi>=0.11.3",
    "demjson3>=3.0.0",
    "mechanize>=0.4.5",
    "pillow>=12.2.0",
    "pysocks>=1.7.1",
    "pyperclip",
]

[project.scripts]
PixivUtil2 = "PixivUtil2:main"
